--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "AJ",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -23,12 +22,8 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
-    "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "express": "4.15.4",
-    "jest": "20.0.4",
-    "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -41,16 +36,19 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.0",
-    "react-test-renderer": "16.0.0",
     "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^11.0.0",
-    "webpack": "^4.32.2",
-    "webpack-dev-server": "^3.4.1"
+    "webpack": "^4.32.2"
   },
   "devDependencies": {
+    "enzyme": "3.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",    
+    "react-test-renderer": "16.0.0",
+    "webpack-dev-server": "^3.4.1",
     "webpack-cli": "^3.3.2"
   }
 }
