--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dates": "12.7.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
+    "react-number-format": "^4.0.8",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
@@ -46,9 +47,9 @@
   "devDependencies": {
     "enzyme": "3.0.0",
     "enzyme-to-json": "3.0.1",
-    "jest": "20.0.4",    
+    "jest": "20.0.4",
     "react-test-renderer": "16.0.0",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
