--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "enzyme-adapter-react-16": "1.0.0",
     "express": "4.15.4",
     "firebase": "^6.2.4",
+    "history": "4.7.2",
     "mini-css-extract-plugin": "^0.7.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
